code25_all/scala/14376335.txt
scala>1 + 2
res7: Int = 3

scala>1 .+(2)
res8: Int = 3

scala> 1 .+2
<console>:1: error: ';' expected but integer literal found.
   1 .+2
       ^

